--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/menu-ficha/menu-ficha.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/menu-ficha/menu-ficha.component.scss
@@ -12,7 +12,8 @@
     border-bottom: solid 1px #174193;
     border-bottom: solid 1px var(--mainColor);
     width: 100%;
-    top: calc(50% - 1.5em);
+    // top: calc(50% - 1.5em);
+    top: 8.5em;
   }
 
   &--button {
