--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/tabla-resultados/tabla-resultados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/tabla-resultados/tabla-resultados.component.html
@@ -25,7 +25,9 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Departamento/ Municipio
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.departamento }} / {{ element.municipio }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.infoProyectos[0].departamentoMunicipio }}
+      </td>
     </ng-container>
 
     <!-- institucionEducativa Column -->
@@ -33,7 +35,9 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Institución Educativa/ Sede
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.institucionEducativa }} / {{ element.sede }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.infoProyectos[0].institucionEducativaSede }}
+      </td>
     </ng-container>
 
     <!-- tipoContrato Column -->
@@ -52,7 +56,7 @@
         Vigencia
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.vigencia }}
+        {{ element.vigencia | date: 'dd/MM/yyyy' }}
       </td>
     </ng-container>
 
@@ -67,11 +71,11 @@
           mat-raised-button
           color="accent"
           class="btn-table"
-          (click)="verFicha()"
+          (click)="verFicha(element.contratoId)"
         >
           Ver ficha
         </button>
-        <button
+        <!-- <button
           mat-button
           mat-raised-button
           color="accent"
@@ -79,7 +83,7 @@
           (click)="descargarFicha()"
         >
           Descargar ficha
-        </button>
+        </button> -->
       </td>
     </ng-container>
 
