--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
@@ -48,8 +48,7 @@
         </div>
         <div class="col" *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.ActuacionesControversias">
           <b class="label-left color-blue">
-            {{ solicitudes.controversiaActuacion !== undefined ? solicitudes.controversiaActuacion.controversiaContractual?.numeroSolicitud : solicitudes?.numeroSolicitud }}
-          </b>
+            {{ solicitudes.numeroSolicitud }}   </b>
         </div>
 
       </div>
